--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "docusaurus start",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
-    "deploy": "yarn fmt && docusaurus deploy",
+    "deploy": "docusaurus deploy",
     "fmt": "prettier --write ."
   },
   "dependencies": {
