--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "static/assets"]
 	path = static/assets
 	url = git@github.com:whistle-lang/assets.git
+[submodule "playground"]
+	path = playground
+	url = git@github.com:whistle-lang/playground.git
