--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "static/assets"]
-	path = static/assets
+[submodule "www/static/assets"]
+	path = www/static/assets
 	url = https://github.com/whistle-lang/assets.git
